Add snow alert subscription feature and notification system
- Implemented AlertSubscription model in the backend to manage user subscriptions for snow alerts.
- Added API endpoints for subscribing, unsubscribing, and fetching notifications.
- Introduced NotificationBell component in the frontend for alert management.
- Updated ResortCard to include alert subscription functionality.
- Enhanced TopSnowList with color-coded snow amounts for better user experience.
- Improved caching and performance optimizations across the application.

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,8 @@ GEMINI_API_KEY=AIzaSyArAfhHMf8XY5u26Gy4OSwFOhDB6KIOv7Q
 PORT=3001
 FRONTEND_URL=http://localhost:3000
 NODE_ENV=development
+
+# Supabase
+SUPABASE_URL=https://resaofjnkytkzhmridwh.supabase.co
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
