--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "node --env-file=.env --import tsx src/index.ts",
+    "dev:watch": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "seed": "tsx src/db/seed.ts"
+    "start": "node --env-file=.env dist/index.js",
+    "preload": "node --env-file=.env --import tsx src/services/preloader.ts",
+    "seed": "node --env-file=.env --import tsx src/db/seed.ts"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
-    "@prisma/client": "^6.0.0",
+    "@supabase/supabase-js": "^2.90.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -24,7 +22,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.14.0",
-    "prisma": "^6.0.0",
     "tsx": "^4.19.0",
     "typescript": "~5.8.2"
   }
