Update .gitignore to exclude environment variable files; modify App component to change default resort and improve cache handling comments; enhance backend routes to ensure consistent timestamping for cache updates.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Environment variables - NEVER commit these!
+.env
+.env.local
+.env.*.local
+.env.development
+.env.production
+backend/.env
+backend/.env.*
+
 # Logs
 logs
 *.log
