--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx serve dist -s -l $PORT"
   },
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0"
+    "lucide-react": "^0.562.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
