Add crawl functionality and resort discovery from OnTheSnow
- Introduced a new endpoint `/api/crawl` to trigger a background crawl for refreshing resort data.
- Added a script `triggerCrawl.ts` to facilitate manual triggering of the crawl.
- Implemented a new service `onTheSnow.ts` for scraping resort data, including base depth, snowfall, and lift status.
- Updated the resort fetching logic to prioritize data from OnTheSnow before falling back to the Gemini API.
- Enhanced the `populateKnownResorts` function to discover and add new resorts to the database.
- Modified the `getToday` function to return a formatted date string.
- Updated package dependencies to include `axios` and `cheerio` for web scraping capabilities.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "preload": "node --env-file=.env --import tsx src/services/preloader.ts",
-    "seed": "node --env-file=.env --import tsx src/db/seed.ts"
+    "seed": "node --env-file=.env --import tsx src/db/seed.ts",
+    "crawl": "node --env-file=.env --import tsx src/scripts/triggerCrawl.ts"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
