--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "start": "npx serve dist -s -l $PORT"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0",
     "serve": "^14.2.1"
   },
   "devDependencies": {
